Fix margin overflow for h1 'welcome back' on slider overlay

--- a/client/src/components/slider/form.css
+++ b/client/src/components/slider/form.css
@@ -326,7 +326,7 @@ input {
 }
 
 .slider-container.right-panel-active .overlay-left {
-	transform: translateX(0);
+	transform: translateX(-1%);
 }
 
 .overlay-right {
